array.island.Island.scala.error
Compilation error:
Island:12: error: not found: value mun
      max = mun(i);
            ^Island:16: error: not found: value levels
  levels[Boolean](max-min+1);
  ^Island:19: error: not found: value levels
    levels(mun(i)-min) = true;
    ^Island:19: error: not found: value mun
    levels(mun(i)-min) = true;
           ^Island:24: error: not found: value levels
    if (levels(i) == true) count += 1;
        ^